tests/snapshots/main__cargo_mutants_in_relative_dependency_tree_passes.snap
---
source: tests/main.rs
expression: stdout
---
Found 8 mutants to test
ok       Unmutated baseline
8 mutants tested: 8 caught
