tests/snapshots/main__cargo_mutants_in_replace_dependency_tree_passes.snap
---
source: tests/main.rs
expression: stdout
---
Found 5 mutants to test
ok       Unmutated baseline
5 mutants tested: 5 caught

