tests/snapshots/main__check_succeeds_in_tree_that_builds_but_fails_tests.snap
---
source: tests/main.rs
expression: stdout
---
Found 4 mutants to test
ok       Unmutated baseline
ok       src/lib.rs:2:5: replace factorial -> u32 with 0
ok       src/lib.rs:2:5: replace factorial -> u32 with 1
ok       src/lib.rs:4:11: replace *= with += in factorial
ok       src/lib.rs:4:11: replace *= with /= in factorial
4 mutants tested: 4 succeeded

