tests/snapshots/main__list_mutants_with_error_value_from_command_line_list.snap
---
source: tests/main.rs
expression: stdout
snapshot_kind: text
---
src/lib.rs:4:5: replace zero_is_ok -> Result<u32, &'static str> with Ok(0)
src/lib.rs:4:5: replace zero_is_ok -> Result<u32, &'static str> with Ok(1)
src/lib.rs:4:5: replace zero_is_ok -> Result<u32, &'static str> with Err(::eyre::eyre!("mutant"))
src/lib.rs:4:10: replace == with != in zero_is_ok
