tests/snapshots/main__no_config_option_disables_config_file_so_error_value_is_not_generated.snap
---
source: tests/main.rs
expression: stdout
snapshot_kind: text
---
Found 3 mutants to test
ok       Unmutated baseline
caught   src/lib.rs:4:5: replace zero_is_ok -> Result<u32, &'static str> with Ok(0)
caught   src/lib.rs:4:5: replace zero_is_ok -> Result<u32, &'static str> with Ok(1)
caught   src/lib.rs:4:10: replace == with != in zero_is_ok
3 mutants tested: 3 caught
